# EnglishAuction

./: README.md  letters.json  letters.txt  words.json
SpacetimeModule/: Cargo.toml  setup-module.sh
SpacetimeModule/src/: lib.rs
admin-cli/: Cargo.toml
admin-cli/src/: init.rs  main.rs  start.rs  update.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: Loader.tsx  LobbyList.tsx  LogoMain.tsx  LogoTextImage.tsx  MatchScoreboard.tsx  PreStart.tsx  RedeemedWordList.tsx  Scoreboard.tsx
frontend/src/constants/: index.ts
frontend/src/state/: auction.state.ts  lobby.state.ts  match.state.ts  redeemed_word.state.ts  tourney.state.ts  winning_bid.state.ts
frontend/types/: index.ts
spacetime-module/: .gitignore  Cargo.toml  setup-module.sh
spacetime-module/src/: lib.rs
src/: lib.rs
typescript-sdk/: filter.ts  package-lock.json  package.json
typescript-sdk/src/: index.ts  spacetimedb.ts  test.ts  types.ts
